Changed title for all pages
Once committed, all webpages will have new titles

--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
 
-    <title>The Agency</title>
+    <title>Dylan C.</title>
 </head>
 <header class="page-header">
     <!-- add your logo here -->
