--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
 
-    <title>Dylan Clowes</title>
+    <title>Dylan C.</title>
 </head>
 
 <body>
