--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
 
-    <title>The Agency</title>
+    <title>Contact Dylan C.</title>
 </head>
 <body>
     <header class="page-header">
