changed capitalization of code
Went from upper case to proper lower case

--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
 <div class="about">
     <p>My name is Dylan I am 26 year old male.</p>
     <p>I recently got married in September of 2022 to my wonderful wife Tatiana.</p>
-    <P>I started this program to start a new career and support my future family.</P>
-    <P>I enjoy to golf, play video games, and go wine tasting with my wife in my spare time.</P>
+    <p>I started this program to start a new career and support my future family.</p>
+    <p>I enjoy to golf, play video games, and go wine tasting with my wife in my spare time.</p>
 
     <a href="#" class="button" download>Download my CV</a>
 
@@ -1753,7 +1753,7 @@
                 <td>Advanced</td>
             </tr>
             <tr>
-                <Td>Customer Service</Td>
+                <td>Customer Service</td>
                 <td>8</td>
                 <td>Advanced</td>
             </tr>
