--- a/work.html
+++ b/work.html
@@ -13,6 +13,7 @@
 
     <title>Dylan C.</title>
 </head>
+<body>
 <header class="page-header">
     <!-- add your logo here -->
     <img src="img/Logoblue.jpg" class="page-header_item" alt="TheAgency"/>
@@ -34,12 +35,12 @@
     </nav>
 </header>
 <section>
-    <H1>Work</H1>
+    <h1>Work</h1>
     <div class="grid">
         <!-- Grid items will live here-->
     
         <div class="grid_item">
-            <H2>Golf</H2>
+            <h2>Golf</h2>
             <p>
                 Golf is a game where you must hit a small ball with clubs into a hole that is vary in distance away. Since Covid the rise in people playing golf has made some courses hard to get onto.
             </p>
@@ -53,14 +54,14 @@
             <a href="#">A link to a webiste that sells clubs</a>
         </div>
         <div class="grid_item">
-            <H2>Golf Swing</H2>
+            <h2>Golf Swing</h2>
             <p>
                 To have a stable golf swing you must be able to shit for your weight without to much motion front to back but back to front. 
             </p>
             <a href="#">Here is a youtube video demonstrating this</a>
         </div>
         <div class="grid_item">
-            <H2>Driving Range Vs Course</H2>
+            <h2>Driving Range Vs Course</h2>
             <p>
                 For new golfers going to the driving range more then playing will help with getting a constisant swing down. It was also help understand how far each club goes. Playing a course to early into playing may lead you to leave the game of golf as it can be frustrating.
             </p>
