--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="main-navigation page-header_item">
             <ul class="navigation-list" role="menubar">
                 <li role="presentation">
-                    <a href="Index.html" class="main-navigation-list_item navigation-list_item-active" role="menuitem">Home</a>
+                    <a href="index.html" class="main-navigation-list_item navigation-list_item-active" role="menuitem">Home</a>
                 </li>
                 <li role="presentation">
                     <a href="about.html" class="main-navigation-list_item" role="menuitem">About Me</a>
