--- a/about.html
+++ b/about.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/styles.production.css" />
 
     <title>About Dylan C.</title>
 </head>
 <body>
     <header class="page-header">
         <!-- add your logo here -->
-        <img src="img/Logoblue.jpg" class="page-header_item" alt="TheAgency"/>
+        <img src="IMG/Logoblue.jpg" class="page-header_item" alt="TheAgency"/>
         <nav class="main-navigation page-header_item">
             <ul class="navigation-list" role="menubar">
                 <li role="presentation">
@@ -1768,9 +1768,9 @@
 <footer class="page-footer">
     <p>Find me on</p>
     <div class="social_media">
-        <img src="img/github.svg" alt="Github"> 
-        <img src="img/twitter.svg" alt="twitter">
-        <img src="img/Linkedin.svg" alt="LinkedIN">
+        <img src="IMG/github.svg" alt="Github"> 
+        <img src="IMG/twitter.svg" alt="twitter">
+        <img src="IMG/Linkedin.svg" alt="LinkedIN">
     </div>
 </footer>
 <script src="js/tota11y.min.js"></script>
