Spelling and adding words
Spell checking all the code

--- a/work.html
+++ b/work.html
@@ -51,7 +51,7 @@
             <p>
                 Clubs come in all prices and sizes. If you are new to the game, buying a pre made set will save money but may not be suited to you perfectly. Once you get the hang of playing golf getting fitted would be the next step.
             </p>
-            <a href="#">A link to a webiste that sells clubs</a>
+            <a href="#">A link to a website that sells clubs</a>
         </div>
         <div class="grid_item">
             <h2>Golf Swing</h2>
@@ -63,23 +63,23 @@
         <div class="grid_item">
             <h2>Driving Range Vs Course</h2>
             <p>
-                For new golfers going to the driving range more then playing will help with getting a constisant swing down. It was also help understand how far each club goes. Playing a course to early into playing may lead you to leave the game of golf as it can be frustrating.
+                For new golfers going to the driving range more then playing will help with getting a consistent swing down. It was also help understand how far each club goes. Playing a course to early into playing may lead you to leave the game of golf as it can be frustrating.
             </p>
-            <a href="#">Here is in article that goes into detail the diffrence.</a>
+            <a href="#">Here is in article that goes into detail the difference.</a>
         </div>
         <div class="grid_item">
             <h2>Golf Rules</h2>
             <p>
-                Golf has a long list of rules and ways to speed up the game. Not knowing all the rules is fine but understanding the diffrence between a white and red stakes, the difrence in the tee boxes, and understanding pace of play rules will help any golfer out.
+                Golf has a long list of rules and ways to speed up the game. Not knowing all the rules is fine but understanding the difference between a white and red stakes, the difference in the tee boxes, and understanding pace of play rules will help any golfer out.
             </p>
-            <a href="#">To go to the offical USGA golf rules</a>
+            <a href="#">To go to the official USGA golf rules</a>
         </div>
         <div class="grid_item">
             <h2>Practice</h2>
             <p>
-                After understanding golf, getting your swing down, and learning the rules the only way to get better at golf is practice and practing the correct movements. Weather that be for the driver, your irons, chipping, or putting having a couple of drills to practice with will help.
+                After understanding golf, getting your swing down, and learning the rules the only way to get better at golf is practice and practicing the correct movements. Weather that be for the driver, your irons, chipping, or putting having a couple of drills to practice with will help.
             </p>
-            <a href="#">Link to a youtube channal that has many drills.</a>
+            <a href="#">Link to a youtube channel that has many drills.</a>
         </div>
     </div>    
 </section>
